--- a/customer-management-service.properties
+++ b/customer-management-service.properties
@@ -1,1 +1,17 @@
+server.port=8081
+
+spring.application.name=customer-management-service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/customer
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+
 
