--- a/account-management-service.properties
+++ b/account-management-service.properties
@@ -1,1 +1,24 @@
+server.port=8083
+
+spring.application.name=account-management-service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/account_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.main.allow-circular-references=true
+
+logging.level.org.springframework=INFO
+logging.level.com.nagarro=DEBUG
+logging.level.org.hibernate=DEBUG
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.prefer-ip-address=true
+
+customer.service.url=http://localhost:8081
+
 
